Ensure ShareThis visibility

--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,7 @@ span.bcbook-icon {
 }
 .tiny-avatar { max-width: 20px; vertical-align: middle; }
 
+#sharethis { height: 48px; }
 /* Desktop */
 @media (min-width: 1981px) {
     body  {    background: transparent url(../images/fond-xxl.jpg) no-repeat center center fixed; }
